placeholder bug fixed

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="container">
                     <div class="header-content">
                         <h1 class="header-title">BEST FOOD</h1>
-                        <p class="header-sub-title">creat your own slogan</p>
+                        <p class="header-sub-title">Create your own slogan</p>
                     </div> <!-- /.header-content -->
                 </div>
             </div>
@@ -68,7 +68,7 @@
                 <div class="container">
                     <div class="header-content">
                         <h1 class="header-title">BEST SNACKS</h1>
-                        <p class="header-sub-title">creat your own slogan</p>
+                        <p class="header-sub-title">Create your own slogan</p>
                     </div> <!-- /.header-content -->
                 </div>
             </div>
@@ -76,7 +76,7 @@
                 <div class="container">
                     <div class="header-content text-right pull-right">
                         <h1 class="header-title">BEST DRINKS</h1>
-                        <p class="header-sub-title">creat your own slogan</p>
+                        <p class="header-sub-title">Create your own slogan</p>
                     </div> <!-- /.header-content -->
                 </div>
             </div>
