--- a/index.html
+++ b/index.html
@@ -881,12 +881,20 @@
                         </div>
                     </div>
                 </div>
-                    
-                <div class="row g-map">
-                    <img src="images/map.png" class="img-responsive">
-                </div>
             </div>
         </section>
+
+
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="gmap">
+                    <iframe width="100%" height="350px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3618.727010735933!2d91.837871!3d24.907291700000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1404919738144"></iframe>
+                    <br />
+                </div>
+            </div>
+        </div>
+
 
 
 
