--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="container">
                     <div class="header-content">
                         <h1 class="header-title">BEST FOOD</h1>
-                        <p class="header-sub-title">creat your own slogan</p>
+                        <p class="header-sub-title">create your own slogan</p>
                     </div> <!-- /.header-content -->
                 </div>
             </div>
@@ -68,7 +68,7 @@
                 <div class="container">
                     <div class="header-content">
                         <h1 class="header-title">BEST SNACKS</h1>
-                        <p class="header-sub-title">creat your own slogan</p>
+                        <p class="header-sub-title">create your own slogan</p>
                     </div> <!-- /.header-content -->
                 </div>
             </div>
@@ -76,7 +76,7 @@
                 <div class="container">
                     <div class="header-content text-right pull-right">
                         <h1 class="header-title">BEST DRINKS</h1>
-                        <p class="header-sub-title">creat your own slogan</p>
+                        <p class="header-sub-title">create your own slogan</p>
                     </div> <!-- /.header-content -->
                 </div>
             </div>
@@ -663,7 +663,7 @@
 
                                 <!-- Loading Screen -->
                                 <div u="loading" style="position: absolute; top: 0px; left: 0px;">
-                                    <div style="filter: alpha(opacity=70); opacity:0.7; position: absolute; display: block;
+                                    <div style="filter: alpha(opacity=0); opacity:0; position: absolute; display: block;
                                         background-color: #000000; top: 0px; left: 0px;width: 100%;height:100%;">
                                     </div>
                                     <div style="position: absolute; display: block; background: url(../images/loading.gif) no-repeat center center;
