--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
                     <div class="col-md-6 col-md-offset-3">
                         <div class="copyright text-center">
                             <p>
-                                @copyright 2015 <a href="http://themewagon.com/">ThemeWagon.com</a>
+                                &copy; Copyright, 2015 <a href="#">Your Website Link.</a> Theme by <a href="http://themewagon.com/"  target="_blank">ThemeWagon</a>
                             </p>
                         </div>
                     </div>
